# claude-symphony

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  SPEC.md
.github/workflows/: ci.yml
docs/: setup.md
examples/: WORKFLOW.md
src/: config.rs  domain.rs  error.rs  main.rs  orchestrator.rs  prompt.rs  scheduling.rs  server.rs  workflow.rs  workspace.rs
src/agent/: mod.rs  protocol.rs  session.rs
src/tracker/: linear.rs  mod.rs
