[package]
name = "symphony"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "symphony"
path = "src/main.rs"

[dependencies]
tokio          = { version = "1", features = ["full"] }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
serde_yaml     = "0.9"
reqwest        = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
notify         = "6"
liquid         = "0.26"
axum           = { version = "0.7", features = ["json"] }
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap           = { version = "4", features = ["derive"] }
anyhow         = "1"
thiserror      = "1"
chrono         = { version = "0.4", features = ["serde"] }
dirs           = "5"
futures        = "0.3"
tokio-util     = { version = "0.7", features = ["codec"] }
libc           = "0.2"

[dev-dependencies]
tempfile       = "3"
